# LearnCG

./: HelloOpenGL.sln  LearnCG.sln  README.md
Breakout_2DGame/: Breakout_2DGame.vcxproj  Breakout_2DGame.vcxproj.filters  CMakeLists.txt
Breakout_2DGame/shaders/: postprocess_fs.glsl  postprocess_vs.glsl  sprite_fs.glsl
Breakout_2DGame/src/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  ParticleGenerator.cpp  ParticleGenerator.h  PostProcessor.cpp  PostProcessor.h  PowerUp.h  ResInfo.h  SpriteRenderer.cpp  SpriteRenderer.h  main.cpp
Breakout_2DGame/src/common/: Camera.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  glad.c
FixedPipeline/: FixedPipeline.cpp  FixedPipeline.vcxproj  FixedPipeline.vcxproj.filters  MarchingCubes.cpp  stdafx.cpp
HelloOpenGL/: HelloOpenGL.vcxproj  HelloOpenGL.vcxproj.filters  MarchingCubes.cpp  Mesh.h  ParticleSystem.cpp  Shader.h  anti_aliasing.cpp  base.cpp  billboard.cpp  blending_discard.cpp  bloom.cpp  camera.h  cubemaps_environment_mapping.cpp  deferred_shading.cpp  depth_testing.cpp  fog.cpp  framebuffers.cpp  gamma_correction.cpp  geometry_shader_houses.cpp  gerstner_water.cpp  hello3D.cpp  helloGLM.cpp  helloGLSL.cpp  helloOpenGL.cpp  helloTexture.cpp  instancing_quads.cpp  light.cpp  model_loading.cpp  normal_mapping.cpp  opengl_debug.h  point_shadows.cpp  shadow_mapping_depth.cpp  sphere.cpp  text_freetype.cpp  text_rendering.cpp  text_uv.cpp
LearnCG/: LearnCG.filters  LearnCG.vcxproj  (+1 more)
(+169 files in other folders)
